--- a/location-page/location.html
+++ b/location-page/location.html
@@ -18,7 +18,7 @@
 </div>
 
 <div class="button-location-div">
-  <a href="/index.html" id="chevron-right"><i class="fa fa-chevron-right"></i></a>
+  <a href="./index.html" id="chevron-right"><i class="fa fa-chevron-right"></i></a>
   <a id="location_button"><span class="location-btn">Back to Home</span></a>
 </div>
 
