--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="button-location-div">
       <a id="location_button"><span class="location-btn">Our location</span></a>
-      <a href="./location-page/location.html" id="chevron-right"><i class="fa fa-chevron-right"></i></a>
+      <a href="/location-page/location.html" id="chevron-right"><i class="fa fa-chevron-right"></i></a>
     </div>
     
      
