--- a/location-page/location.html
+++ b/location-page/location.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="stylesheet" href="./location-page/style.css">
+  <link rel="stylesheet" href="/location-page/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@400;500;600;700;800;900&family=Outfit:wght@400;500;600;700;800;900&display=swap" rel="stylesheet"> 
   
@@ -14,11 +14,11 @@
 <body>
 
   <div class="map-image-div">
-    <img src="mobile/image-map@2x.png">
+    <img src="/mobile/image-map@2x.png">
 </div>
 
 <div class="button-location-div">
-  <a href="./index.html" id="chevron-right"><i class="fa fa-chevron-right"></i></a>
+  <a href="/index.html" id="chevron-right"><i class="fa fa-chevron-right"></i></a>
   <a id="location_button"><span class="location-btn">Back to Home</span></a>
 </div>
 
