--- a/location-page/location.html
+++ b/location-page/location.html
@@ -14,7 +14,7 @@
 <body>
 
   <div class="map-image-div">
-    <img src="/mobile/image-map@2x.png">
+    <img src="/art-gallery/mobile/image-map@2x.png">
 </div>
 
 <div class="button-location-div">
